fix play button preview on mobile

--- a/ui/scss/component/_content.scss
+++ b/ui/scss/component/_content.scss
@@ -337,6 +337,8 @@
     .content__info {
       margin-top: -50px;
       opacity: 0;
+      pointer-events: none;
+
       .button--uri-indicator {
         display: none;
       }
